--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,27 @@
       <artifactId>commons-codec</artifactId>
       <version>1.17.1</version>
     </dependency>
+
+    <dependency>
+      <groupId>dnsjava</groupId>
+      <artifactId>dnsjava</artifactId>
+      <version>3.6.0</version>
+    </dependency>
+
+
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.36</version>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.2.11</version>
+      </dependency>
+
+
+
   </dependencies>
   <build>
     <plugins>
